Fix Search Box Alignment

--- a/css/style.css
+++ b/css/style.css
@@ -102,7 +102,7 @@ html {
     float: left;
   }
   .search-button {
-    height: 42px;
+    height: 40px;
     width: 55px;
     border: none;
     background: white;
